<resources>
    <string name="app_name">BikeView</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="redLight">Red Light</string>
    <string name="breakLight">Auto Brake Light</string>
    <string name="nightLight">Night Light</string>
    <string name="brakeLight">Brake Light</string>
    <string name="connection_ic">connection</string>
    <string name="nconnection_ic">not connected</string>
    <string name="brightness">brightness</string>
</resources>
