<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="15" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="@android:dimen/thumbnail_width"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:progress="50"
                android:thumb="@drawable/ic_brightness"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/brightButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/brightness"
                android:src="@drawable/ic_brightness" />

            <ImageButton
                android:id="@+id/connButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/connection_ic"
                android:src="@drawable/ic_wifi_slash" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>




    <TextureView
        android:id="@+id/videoSurface"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="horizontal">

    </TextureView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/leftButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:textOff="@string/left"
            android:textOn="@string/left"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="24sp"
            android:typeface="normal"/>

        <ToggleButton
            android:id="@+id/rightButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:textOff="@string/right"
            android:textOn="@string/right"
            android:fontFamily="@font/roboto_medium"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textSize="24sp"
            android:typeface="normal"/>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/redButton"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:checked="false"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textOff="@string/redLight"
        android:textOn="@string/redLight"
        android:textSize="24sp"
        android:typeface="normal" />

    <ToggleButton
        android:id="@+id/brakeButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textOff="@string/brakeLight"
        android:textOn="@string/brakeLight"
        android:textSize="24sp"
        android:typeface="normal" />

    <ToggleButton
        android:id="@+id/nightButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textOff="@string/nightLight"
        android:textOn="@string/nightLight"
        android:fontFamily="@font/roboto_medium"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:textSize="24sp"
        android:typeface="normal"/>


</LinearLayout>

